fix some problems with overflow

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,6 +1,7 @@
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
   padding-bottom: 10px;
+  position: relative;
 }
 
 @media (max-width: 979px) {
@@ -8,12 +9,11 @@ body {
     padding-top: 0px;
   }
 }
-
-
-#target  {
+#target fieldset {
   border: 1px solid #ccc;
   min-height: 200px;
   padding: 5px;
+  padding-bottom: 60px;
 }
 
 .control-group {
@@ -40,7 +40,7 @@ input {
   background: transparent;
   position: absolute;
   top: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   left: 0;
 }
 
